# CG

./: .gitignore  README.md
fase1/: CMakeLists.txt
fase1/Engine/: main.cpp
fase1/Engine/headers/: main.h
fase1/Generator/: main.cpp  plane.cpp  point.cpp  sphere.cpp
fase1/Generator/headers/: box.h  plane.h  primitive.h
fase2/: CMakeLists.txt
fase2/Engine/: Group.cpp  Model.cpp  Transformation.cpp  main.cpp
fase2/Engine/headers/: Group.h  Model.h  Transformation.h
fase2/Generator/: cone.cpp  main.cpp  torus.cpp
fase2/Generator/headers/: cone.h  main.h  primitive.h
fase2/XMLFiles/: solarSystemAlinhado.xml
fase3/: CMakeLists.txt
fase3/Engine/: Group.cpp  Model.cpp  Transformation.cpp  main.cpp  tinyxml2.cpp
fase3/Engine/headers/: Group.h  Model.h  Transformation.h  main.h
fase3/Generator/: box.cpp  main.cpp  patches.cpp  plane.cpp  primitive.cpp
fase3/Generator/headers/: patches.h  primitive.h  sphere.h  torus.h
fase3/Utils/: MatrixOperations.cpp  MatrixOperations.h  point.cpp  point.h
fase3/XMLFiles/: solarSystem.xml  solarSystemAlinhadoCores.xml
fase4/: CMakeLists.txt
fase4/Engine/: Group.cpp  Light.cpp  Model.cpp  Transformation.cpp  main.cpp
fase4/Engine/headers/: Light.h  Model.h  Transformation.h
fase4/Generator/: box.cpp  cone.cpp  main.cpp  patches.cpp  plane.cpp  sphere.cpp  torus.cpp
fase4/Generator/headers/: box.h  cone.h  patches.h  plane.h  primitive.h  sphere.h  torus.h
fase4/Utils/: point.cpp  point.h
fase4/XMLFiles/: teapot10.xml  test_1_1.xml  test_2_2.xml  test_3_2.xml  test_4_6.xml
fase4/XMLFiles/SolarSystem/: solarSystemAnimatedFinal.xml
fase4/XMLFiles/SolarSystem/Older versions/: solarSystemAnimated.xml  solarSystemCores.xml  solarSystemDisperso.xml  solarSystemDispersoCores.xml
